--- a/backend/app/app/ui/map.html
+++ b/backend/app/app/ui/map.html
@@ -111,12 +111,16 @@
                       <input type="number" id="frequencyInput" class="form-control" min="0" step="0.01" placeholder="0.2">
                     </div>
                     <div class="col form-group">
+                      <label for="amplitudeInput">Amplitude:</label>
+                      <input type="number" id="amplitudeInput" class="form-control" min="0" step="0.01" placeholder="10.0">
+                    </div>
+                    <div class="col form-group">
                       <label for="phaseInput">Phase:</label>
                       <input type="number" id="phaseInput" class="form-control" min="0" step="0.01" placeholder="2.0">
                     </div>
                     <div class="col form-group">
-                      <label for="amplitudeInput">Amplitude:</label>
-                      <input type="number" id="amplitudeInput" class="form-control" min="0" step="0.01" placeholder="10.0">
+                      <label for="offserInput">Offset:</label>
+                      <input type="number" id="offsetInput" class="form-control" min="0" step="0.01" placeholder="50.0">
                     </div>
                   </div>
                   <button type="button" class="btn btn-primary ml-3 mt-2" onclick="updateValues()">Update</button>
