Add msisdn to UE entity

--- a/backend/app/app/ui/dashboard.html
+++ b/backend/app/app/ui/dashboard.html
@@ -641,6 +641,10 @@
                         <input type="text" class="form-control" id="edit_UE_mac">
                       </div>
                       <div class="col-md-3">
+                        <label for="edit_UE_msisdn" class="form-label">Phone Number (MSISDN)</label>
+                        <input type="text" class="form-control" id="edit_UE_msisdn">
+                      </div>
+                      <div class="col-md-3">
                         <label for="edit_UE_gNB" class="form-label">gNB</label>
                         <input type="text" class="form-control" id="edit_UE_gNB" disabled>
                       </div>
@@ -749,6 +753,10 @@
                       <div class="col-md-4">
                         <label for="add_UE_mac" class="form-label">MAC address</label>
                         <input type="text" class="form-control" id="add_UE_mac" value="22-00-00-00-00-01">
+                      </div>
+                      <div class="col-md-3">
+                        <label for="add_UE_msisdn" class="form-label">Phone Number (MSISDN)</label>
+                        <input type="text" class="form-control" id="add_UE_msisdn" value="2020100000001">
                       </div>
                       <!-- --------------------------------- -->
                       <div class="col-md-4">
