Add visiting PLMN ID data to UE
This will support future work on roaming related APIs

--- a/backend/app/app/ui/dashboard.html
+++ b/backend/app/app/ui/dashboard.html
@@ -665,6 +665,10 @@
                         <label for="edit_UE_cell" class="form-label">Cell</label>
                         <input type="text" class="form-control" id="edit_UE_cell" disabled>
                       </div>
+                      <div class="col-md-3">
+                        <label for="edit_UE_vplmnid" class="form-label">Visiting PLMN ID</label>
+                        <input type="text" class="form-control" id="edit_UE_vplmnid" placeholder="999-09">
+                      </div>
                       <!-- --------------------------------- -->
                       <div class="col-12 mt-4">
                         <h5>🔵 Current Location - path</h5>
@@ -754,7 +758,7 @@
                         <label for="add_UE_mac" class="form-label">MAC address</label>
                         <input type="text" class="form-control" id="add_UE_mac" value="22-00-00-00-00-01">
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-4">
                         <label for="add_UE_msisdn" class="form-label">Phone Number (MSISDN)</label>
                         <input type="text" class="form-control" id="add_UE_msisdn" value="2020100000001">
                       </div>
@@ -770,6 +774,10 @@
                       <div class="col-md-4">
                         <label for="add_UE_dnn" class="form-label">dnn</label>
                         <input type="text" class="form-control" id="add_UE_dnn" value="province1.mnc01.mcc202.gprs" disabled>
+                      </div>
+                      <div class="col-md-4">
+                        <label for="add_UE_vplmnid" class="form-label">Visiting PLMN ID</label>
+                        <input type="text" class="form-control" id="add_UE_vplmnid" placeholder="999-09">
                       </div>
                       <!-- --------------------------------- -->
                       <div class="col-12 mt-4">
